name:                Habra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/martinring/Habra#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Ring
maintainer:          example@example.com
copyright:           2017 Martin Ring
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Habra-exe
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, Habra, text,
                       wai, wai-app-static, warp,
                       websockets, wai-websockets
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martinring/Habra
