name:                habra
version:             0.1.0.0
synopsis:            Habra Presentation Tool
description:         The Habra Presentation Tool
homepage:            https://github.com/martinring/Habra#readme
license:             MIT
license-file:        LICENSE
author:              Martin Ring
maintainer:          martin.ring@dfki.de
copyright:           2017 Martin Ring
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable habra
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, file-embed,
                       wai, wai-app-static, warp,
                       websockets, wai-websockets
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martinring/Habra
